2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Fixed minor spelling error.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/vcs/svn.py:
	Updated commentary describing how the cache is build so everybody knows and
	also so I don't have trouble rading the code 6 months from now.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Improved the way watches are added. Changed all status calls to work
	properly with the new cache (which is reverted).
	
	* nautilussvn/lib/vcs/svn.py:
	Cache is reverted, so fixing all indexes. is_ and has_ functions now use
	status_with_cache instead of status.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/vcs/svn.py:
	Fixed tiny, but with serious consequences, logic error. Cache should now
	be properly bypassed when invalidate is set to True.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	NautilusSvn.py is in a state of flux right now (might be broken), but 
	committing anyways to save changes.
	
	* nautilussvn/lib/vcs/svn.py:
	Reverted SVN.status back to r387 but marked it deprecated and added 
	function status_with_cache to replace it (entirely refactored). I'm too 
	worried replacing status right now would break other stuff (and bother 
	Adam in the process). 

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Updated workaround for the multiple emblem problem, now it seems to work.

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Ok, I've thought up of a possible workaround for the threading issues.

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py: